Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-32761

Auto Scrolling in ScrollArea is not working on Mac

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • None
    • 5.1.0
    • Widgets: Itemviews
    • None
    • Mac
    • macOS

    Description

      Run the itemviews /puzzle example.

      Hold the mouse on any image and pull it down so that scrollarea tries to scroll down .

      It scrolls down in Linux and Windows, but doesnt in Mac

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            tpochep Timur Pocheptsov
            tapadar Indrajit Tapadar (Inactive)
            Votes:
            2 Vote for this issue
            Watchers:
            4 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes